# Artemis

./: .gitignore  README.md  go.work
data/vector/common/: etcd3gw.py
data/vector/config/: config.py
infra/cloud/: go.mod
infra/cloud/pkg/k8s/: client.go
infra/player/src/: etcd_test.rs
software/: README.md
software/admin/: README.md  go.mod  go.sum
software/admin/api/proto/: admin.pb.go  (+5 more)
software/admin/cmd/: cmd.go
software/admin/config/: settings.yaml
software/admin/docs/: docs.go  swagger.json  swagger.yaml
software/admin/global/: global.go  model.go
software/blog/: .air.toml  README.md  go.mod  go.sum  main.go
software/blog/cmd/: cmd.go
software/blog/config/: settings.yaml
software/blog/docs/: docs.go  swagger.json  swagger.yaml
software/blog/global/: global.go  model.go  type.go
software/blog/internal/: greeter.go
software/blog/templates/: embed.go
software/openapi/: README.md  local.env  main.py  pyproject.toml
software/openapi/common/: cache.py  db.py  lazy_string.py  page.py  requestx.py  response.py
software/openapi/config/: config.py  constant.py  db.py
software/openapi/i18n/: __init__.py  babel.cfg  messages.pot
software/openapi/i18n/en/LC_MESSAGES/: messages.mo  messages.po
software/openapi/i18n/zh_CN/LC_MESSAGES/: messages.mo  messages.po
software/openapi/migrations/models/: 15_20230320000307_None.py  16_20230320000341_update.py
software/openapi/models/: api.py  basemodel.py
software/openapi/router/: __init__.py  api.py  captcha.py  delivery.py  index.py  user.py
software/openapi/schemas/: api.py  schemas.py
(+221 files in other folders)
